   - SettlementPage: takes advantage of new display facilities.
   - TVAForm: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - TVARecord: takes advantage of ofaITVColumnable and companion interfaces (todo #1182).
   - Improve formulas updates (todo #1214).

 Bug fixes:

   - AccountSelect: close the window on account selection (todo #1187).
   - BatlineTreeview: fix columns visibility change (todo #1219).
   - IPrintable: does not say "succesfully printed" when cancelled (todo #1188).
   - ITreeAdder: fix columns adding (todo #1190).
   - LedgerClose: fix typo.
   - OpeTemplatePage: fix row activation.
   - OpeTemplateSelect: fix missing getter.
   - OpeTemplateStore: fix row insertion (todo #1189).
   - PeriodClose: fix the 'archive accounts' user preference (todo #1205).
   - RecurrentModel: fix update on OpeTemplate mnemmonic modification (todo #1203).
   - RecurrentModel: fix update on 'never' periodicity.
   - TVBin: Fix sort on incomplete rows (todo #1199).
   - AccountSelect, OpeTemplateSelect: fix columns visibility propagation (todo #1215).

 Other changes:

   - AccountSelect, OpeTemplateSelect: homogeneize UIs.
   - EntryListview, EntryStore: new classes.
   - myIActionMap, myAccelGroup: simplify code and review interface.
   - All collections: are no more sorted (todo #1208).
   - ITreeviewColumn, ITreeviewDisplay: obsoleted interfaces (todo #1179).
   - Object classes: review xxx_use_yyy() usage (todo #1207).
   - ofaActionPage: new ofaPage-derived class.
   - ofa_buttons_box_add_button_with_mnemonic(): obsoleted method (todo #1181).
   - ofaPanedPage: new ofaPage-derived class.
   - ofaRateStore, ofaRateTreeview: new classes.
   - ofaReconcilStore, ofaReconcilTreeview: new classes.
   - RecurrentManagePage: renamed to RecurrentModelPage (todo #1211).
   - All stores take advantage of hub as a private variable (todo #1216).
   - Normalize virtual method names (todo #1218).